add showAlertmessage and hadle exwpetion